--- a/.forgejo/workflows/build.yaml
+++ b/.forgejo/workflows/build.yaml
@@ -6,6 +6,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ${{ secrets.FORGEJO_REGISTRY }}/${{ secrets.FORGEJO_USERNAME }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha
+        env:
+          DOCKER_METADATA_SHORT_SHA_LENGTH: 8
+        
       - uses: docker/login-action@v3
         with:
           registry: ${{ secrets.FORGEJO_REGISTRY }}
@@ -17,7 +27,4 @@ jobs:
       - uses: docker/build-push-action@v6
         with:
           push: true
-          tags: |
-            ${{ secrets.FORGEJO_REGISTRY }}/${{ secrets.FORGEJO_USERNAME }}/netbox:latest
-            ${{ secrets.FORGEJO_REGISTRY }}/${{ secrets.FORGEJO_USERNAME }}/netbox:${{ GITHUB_RUN_NUMBER }}
-          
+          tags: ${{ steps.meta.outpus.tags }}
