--- a/.forgejo/workflows/build.yaml
+++ b/.forgejo/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha
+            type=raw,value={{date 'YYYYMMDD-HHmmss'}}
         env:
           DOCKER_METADATA_SHORT_SHA_LENGTH: 8
         
@@ -27,4 +28,4 @@ jobs:
       - uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ steps.meta.outpus.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
