--- a/.forgejo/workflows/build.yaml
+++ b/.forgejo/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: docker/metadata-action@v5
         id: meta
         with:
-          images: ${{ secrets.FORGEJO_REGISTRY }}/${{ secrets.FORGEJO_USERNAME }}
+          images: ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha
@@ -19,8 +19,8 @@ jobs:
         
       - uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.FORGEJO_REGISTRY }}
-          username: ${{ secrets.FORGEJO_USERNAME }}
+          registry: ${{ vars.FORGEJO_REGISTRY }}
+          username: ${{ vars.FORGEJO_USERNAME }}
           password: ${{ secrets.FORGEJO_PASSWORD }}
 
       - uses: docker/setup-buildx-action@v3
