--- a/.forgejo/workflows/build.yaml
+++ b/.forgejo/workflows/build.yaml
@@ -5,27 +5,28 @@ jobs:
     runs-on: nixos
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox
-          tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=sha
-            type=raw,value={{date 'YYYYMMDD-HHmmss'}}
-        env:
-          DOCKER_METADATA_SHORT_SHA_LENGTH: 8
-        
-      - uses: docker/login-action@v3
-        with:
-          registry: ${{ vars.FORGEJO_REGISTRY }}
-          username: ${{ vars.FORGEJO_USERNAME }}
-          password: ${{ secrets.FORGEJO_PASSWORD }}
+      - run: |
+          podman build -t ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox:latest
+      # - uses: docker/metadata-action@v5
+      #   id: meta
+      #   with:
+      #     images: ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox
+      #     tags: |
+      #       type=raw,value=latest,enable={{is_default_branch}}
+      #       type=sha
+      #       type=raw,value={{date 'YYYYMMDD-HHmmss'}}
+      #   env:
+      #     DOCKER_METADATA_SHORT_SHA_LENGTH: 8
 
-      - uses: docker/setup-buildx-action@v3
+      # - uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ vars.FORGEJO_REGISTRY }}
+      #     username: ${{ vars.FORGEJO_USERNAME }}
+      #     password: ${{ secrets.FORGEJO_PASSWORD }}
 
-      - uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
+      # - uses: docker/setup-buildx-action@v3
+
+      # - uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
