--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,31 @@
 name: build container
 on: push
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+        # with:
+        #   registry: ${{ vars.FORGEJO_REGISTRY }}
+        #   username: ${{ vars.FORGEJO_USERNAME }}
+        #   password: ${{ secrets.FORGEJO_PASSWORD }}
+
       - uses: docker/metadata-action@v5
         id: meta
         with:
-          images: ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox
+          # images: ${{ vars.FORGEJO_REGISTRY }}/${{ vars.FORGEJO_USERNAME }}/netbox
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=sha
@@ -17,16 +33,10 @@ jobs:
         env:
           DOCKER_METADATA_SHORT_SHA_LENGTH: 8
 
-      - uses: docker/login-action@v3
-        with:
-          registry: ${{ vars.FORGEJO_REGISTRY }}
-          username: ${{ vars.FORGEJO_USERNAME }}
-          password: ${{ secrets.FORGEJO_PASSWORD }}
-
-      - uses: docker/setup-buildx-action@v3
-
       - uses: docker/build-push-action@v6
         with:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
